--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@types/pg": "^8.15.5",
 		"@typescript/native-preview": "latest",
 		"csv-parse": "^6.1.0",
-		"drizzle-kit": "^0.31.4"
+		"drizzle-kit": "alternation-engine"
 	},
 	"dependencies": {
 		"@electric-sql/pglite": "^0.3.7",
