--- a/package.json
+++ b/package.json
@@ -20,22 +20,27 @@
 		"lint": "oxlint --type-aware"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.2.23",
-		"@types/pg": "^8.15.5",
+		"@types/bun": "^1.3.2",
+		"@types/pg": "^8.15.6",
 		"@typescript/native-preview": "latest",
 		"csv-parse": "^6.1.0",
 		"drizzle-kit": "alternation-engine",
-		"oxlint": "^1.19.0",
-		"oxlint-tsgolint": "^0.2.0"
+		"oxlint": "^1.26.0",
+		"oxlint-tsgolint": "^0.5.1"
 	},
 	"dependencies": {
-		"@electric-sql/pglite": "^0.3.10",
-		"@orpc/client": "^1.9.2",
-		"@orpc/contract": "^1.9.2",
-		"@orpc/server": "^1.9.2",
+		"@electric-sql/pglite": "^0.3.14",
+		"@orpc/client": "^1.11.0",
+		"@orpc/contract": "^1.11.0",
+		"@orpc/server": "^1.11.0",
 		"drizzle-orm": "alternation-engine",
 		"drizzle-zod": "alternation-engine",
 		"pg": "^8.16.3",
-		"zod": "^4.1.11"
+		"zod": "^4.1.12"
+	},
+	"overrides": {
+		"drizzle-orm": "alternation-engine",
+		"drizzle-zod": "alternation-engine",
+		"drizzle-kit": "alternation-engine"
 	}
 }
