--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "^1.3.3",
+		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.15.6",
 		"@typescript/native-preview": "latest",
 		"csv-parse": "^6.1.0",
@@ -35,6 +36,7 @@
 		"@orpc/server": "^1.11.3",
 		"drizzle-orm": "alternation-engine",
 		"drizzle-zod": "alternation-engine",
+		"node-cron": "^4.2.1",
 		"pg": "^8.16.3",
 		"zod": "^4.1.12"
 	},
