--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
 		"lint": "oxlint --type-aware"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.3.3",
+		"@types/bun": "^1.3.4",
 		"@types/node-cron": "^3.0.11",
 		"@types/pg": "^8.15.6",
 		"@typescript/native-preview": "latest",
 		"csv-parse": "^6.1.0",
 		"drizzle-kit": "alternation-engine",
-		"oxlint": "^1.31.0",
-		"oxlint-tsgolint": "^0.8.3"
+		"oxlint": "^1.32.0",
+		"oxlint-tsgolint": "^0.8.4"
 	},
 	"dependencies": {
 		"@electric-sql/pglite": "^0.3.14",
@@ -36,6 +36,7 @@
 		"@orpc/server": "^1.12.2",
 		"drizzle-orm": "alternation-engine",
 		"drizzle-zod": "alternation-engine",
+		"jose": "^6.1.3",
 		"node-cron": "^4.2.1",
 		"pg": "^8.16.3",
 		"zod": "^4.1.13"
