--- a/package.json
+++ b/package.json
@@ -20,30 +20,30 @@
 		"lint": "oxlint --type-aware"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.3.4",
+		"@types/bun": "^1.3.5",
 		"@types/node-cron": "^3.0.11",
-		"@types/pg": "^8.15.6",
+		"@types/pg": "^8.16.0",
 		"@typescript/native-preview": "latest",
 		"csv-parse": "^6.1.0",
-		"drizzle-kit": "alternation-engine",
-		"oxlint": "^1.32.0",
-		"oxlint-tsgolint": "^0.8.4"
+		"drizzle-kit": "beta",
+		"oxlint": "^1.38.0",
+		"oxlint-tsgolint": "^0.10.1"
 	},
 	"dependencies": {
 		"@electric-sql/pglite": "^0.3.14",
-		"@orpc/client": "^1.12.2",
-		"@orpc/contract": "^1.12.2",
-		"@orpc/server": "^1.12.2",
-		"drizzle-orm": "alternation-engine",
-		"drizzle-zod": "alternation-engine",
+		"@orpc/client": "^1.13.2",
+		"@orpc/contract": "^1.13.2",
+		"@orpc/server": "^1.13.2",
+		"drizzle-orm": "beta",
+		"drizzle-zod": "beta",
 		"jose": "^6.1.3",
 		"node-cron": "^4.2.1",
 		"pg": "^8.16.3",
-		"zod": "^4.1.13"
+		"zod": "^4.3.5"
 	},
 	"overrides": {
-		"drizzle-orm": "alternation-engine",
-		"drizzle-zod": "alternation-engine",
-		"drizzle-kit": "alternation-engine"
+		"drizzle-orm": "beta",
+		"drizzle-zod": "beta",
+		"drizzle-kit": "beta"
 	}
 }
